<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_min_credit_hours"
        android:inputType="number"
        android:key="min_credit_hours"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_min_credit_hours" />

    <EditTextPreference
        android:defaultValue="@string/pref_max_credit_hours"
        android:inputType="number"
        android:key="max_credit_hours"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_credit_hours" />

    <EditTextPreference
        android:defaultValue="@string/pref_min_num_classes"
        android:inputType="number"
        android:key="min_num_classes"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_min_num_classes" />

    <EditTextPreference
        android:defaultValue="@string/pref_max_num_classes"
        android:inputType="number"
        android:key="max_num_classes"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_max_num_classes" />

</PreferenceScreen>