<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dayTimeLocationPicker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_padding"
    android:paddingBottom="@dimen/activity_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_inside_view"
        android:paddingBottom="@dimen/padding_inside_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday_abbreviation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday_abbreviation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday_abbreviation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday_abbreviation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday_abbreviation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday_abbreviation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday_abbreviation" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_inside_view"
            android:paddingBottom="@dimen/padding_inside_view"
            android:minHeight="@dimen/touchable_ui_component_min">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/sunCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/monCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/tueCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/wedCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/thuCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/friCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/satCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showTimeAndLocation" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/startAndEndTimes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:paddingTop="@dimen/padding_inside_view"
            android:paddingBottom="@dimen/padding_inside_view"
            android:minHeight="@dimen/touchable_ui_component_min"
            android:gravity="center">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:clickable="false"
                    android:text="@string/text_from"
                    android:visibility="visible"
                    android:gravity="center"/>

                <!-- TODO: better background for startTime and endTime -->

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:clickable="true"
                    android:hint="@string/text_start_time"
                    android:onClick="setTime"
                    android:visibility="visible" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="right"
                    android:text="@string/text_to"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/editbox_background_normal"
                    android:clickable="true"
                    android:hint="@string/text_end_time"
                    android:onClick="setTime"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/edit_room_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_inside_view"
            android:paddingBottom="@dimen/padding_inside_view"
            android:minHeight="@dimen/touchable_ui_component_min"
            android:hint="@string/hint_room_number"
            android:textSize="@dimen/abc_text_size_small_material"
            android:visibility="gone"
            android:inputType="number|textCapWords"/>
    </LinearLayout>


</LinearLayout>